<resources>
    <string name="app_launcher_name">Gallery</string>
    <string name="edit">Edit</string>
    <string name="open_camera">Open camera</string>
    <string name="hidden">(hidden)</string>
    <string name="excluded">(excluded)</string>
    <string name="pin_folder">Pin folder</string>
    <string name="unpin_folder">Unpin folder</string>
    <string name="pin_to_the_top">Pin to the top</string>
    <string name="show_all">Show all folders content</string>
    <string name="all_folders">All folders</string>
    <string name="folder_view">Switch to folder view</string>
    <string name="other_folder">Other folder</string>
    <string name="show_on_map">Show on map</string>
    <string name="unknown_location">Unknown location</string>
    <string name="volume">Volume</string>
    <string name="brightness">Brightness</string>
    <string name="lock_orientation">Lock orientation</string>
    <string name="unlock_orientation">Unlock orientation</string>
    <string name="change_orientation">Change orientation</string>
    <string name="force_portrait">Force portrait</string>
    <string name="force_landscape">Force landscape</string>
    <string name="force_landscape_reverse">Force landscape (reverse)</string>
    <string name="use_default_orientation">Use default orientation</string>
    <string name="fix_date_taken">Fix Date Taken value</string>
    <string name="fixing">Fixing…</string>
    <string name="dates_fixed_successfully">Dates fixed successfully</string>
    <string name="no_date_takens_found">No Date Taken values have been found</string>
    <string name="share_resized">Share a resized version</string>
    <string name="switch_to_file_search">Switch to file search across all visible folders</string>
    <string name="set_as_default_folder">Set as default folder</string>
    <string name="unset_as_default_folder">Unset as default folder</string>
    <string name="reorder_by_dragging">Reorder folders by dragging</string>
    <string name="reorder_by_dragging_pro">Reorder folders by dragging (Pro)</string>
    <string name="restore_to_path">Restoring to \'%s\'</string>
    <plurals name="restore_confirmation">
        <item quantity="one">Are you sure you want to restore %d file?</item>
        <item quantity="other">Are you sure you want to restore %d files?</item>
    </plurals>
    <string name="full_storage_permission_required">Fossify Gallery needs full access to display all your photos and videos. Go to Settings > Permissions > Photos and videos > Allow all.</string>
    <string name="filter_media">Filter media</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="gifs">GIFs</string>
    <string name="raw_images">RAW images</string>
    <string name="svgs">SVGs</string>
    <string name="portraits">Portraits</string>
    <string name="no_media_with_filters">No media files have been found with the selected filters.</string>
    <string name="change_filters_underlined"><u>Change filters</u></string>
    <string name="hide_folder_description">This function hides the folder by adding a \'.nomedia\' file into it, it will hide all subfolders too. You can see them by toggling the \'Show hidden items\' option in Settings. Continue?</string>
    <string name="exclude_folder_description">This will exclude the selection together with its subfolders from Fossify Gallery only. You can manage excluded folders in Settings.</string>
    <string name="exclude_folder_parent">Exclude a parent instead?</string>
    <string name="excluded_activity_placeholder">Excluding folders will make them together with their subfolders hidden just in Fossify Gallery, they will still be visible in other applications.\n\nIf you want to hide them from other apps too, use the Hide function.</string>
    <string name="hidden_folders">Hidden folders</string>
    <string name="manage_hidden_folders">Manage hidden folders</string>
    <string name="hidden_folders_placeholder">Seems like you don\'t have any folders hidden with a \".nomedia\" file.</string>
    <string name="hidden_all_files">You have to grant the app All Files access to see hidden files, else it cannot work.</string>
    <string name="cant_unhide_folder">If a folder or one of its parent folders has a dot before its name, it is hidden and cannot be unhidden like this. You have to remove the dot by renaming it.</string>
    <string name="include_folders">Included folders</string>
    <string name="manage_included_folders">Manage included folders</string>
    <string name="add_folder">Add folder</string>
    <string name="included_activity_placeholder">If you have some folders which contain media, but were not recognized by the app, you can add them manually here.\n\nAdding some items here will not exclude any other folder.</string>
    <string name="no_media_add_included">No media files have been found. You can solve it by adding the folders containing media files manually.</string>
    <string name="resize_and_save">Resize selection and save</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="keep_aspect_ratio">Keep aspect ratio</string>
    <string name="invalid_values">Please enter a valid resolution</string>
    <string name="resize_multiple_images">Resize multiple images</string>
    <string name="resize_factor">Resize factor</string>
    <string name="resize_factor_info">Resize images to the given percentage, value must be within 10 and 90.</string>
    <string name="resize_factor_error">Enter a number between 10 and 90</string>
    <plurals name="failed_to_resize_images">
        <item quantity="one">Failed to resize %d image</item>
        <item quantity="other">Failed to resize %d images</item>
    </plurals>
    <string name="images_resized_successfully">Images resized successfully</string>
    <string name="editor">Editor</string>
    <string name="basic_editor">Basic Editor</string>
    <string name="advanced_editor">Advanced Editor</string>
    <string name="rotate">Rotate</string>
    <string name="invalid_image_path">Invalid image path</string>
    <string name="invalid_video_path">Invalid video path</string>
    <string name="image_editing_failed">Image editing failed</string>
    <string name="video_editing_failed">Video editing failed</string>
    <string name="image_editing_cancelled">Image editing cancelled</string>
    <string name="video_editing_cancelled">Video editing cancelled</string>
    <string name="file_edited_successfully">File edited successfully</string>
    <string name="image_edited_successfully">Image edited successfully</string>
    <string name="video_edited_successfully">Video edited successfully</string>
    <string name="edit_image_with">Edit image with:</string>
    <string name="edit_video_with">Edit video with:</string>
    <string name="no_image_editor_found">No image editor found</string>
    <string name="no_video_editor_found">No video editor found</string>
    <string name="unknown_file_location">Unknown file location</string>
    <string name="overwrite_original">Overwrite original</string>
    <string name="error_saving_file">Could not overwrite the source file</string>
    <string name="rotate_left">Rotate left</string>
    <string name="rotate_right">Rotate right</string>
    <string name="rotate_one_eighty">Rotate by 180º</string>
    <string name="transform">Transform</string>
    <string name="crop">Crop</string>
    <string name="draw">Draw</string>
    <string name="flip">Flip</string>
    <string name="flip_horizontally">Flip horizontally</string>
    <string name="flip_vertically">Flip vertically</string>
    <string name="free_aspect_ratio">Free</string>
    <string name="other_aspect_ratio">Other</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="set_as_wallpaper">Set as Wallpaper</string>
    <string name="set_as_wallpaper_failed">Setting as Wallpaper failed</string>
    <string name="set_as_wallpaper_with">Set as wallpaper with:</string>
    <string name="setting_wallpaper">Setting wallpaper&#8230;</string>
    <string name="wallpaper_set_successfully">Wallpaper set successfully</string>
    <string name="portrait_aspect_ratio">Portrait aspect ratio</string>
    <string name="landscape_aspect_ratio">Landscape aspect ratio</string>
    <string name="home_screen">Home screen</string>
    <string name="lock_screen">Lock screen</string>
    <string name="home_and_lock_screen">Home and lock screen</string>
    <string name="allow_changing_aspect_ratio">Allow changing the aspect ratio</string>
    <string name="slideshow">Slideshow</string>
    <string name="interval">Interval</string>
    <string name="include_photos">Include photos</string>
    <string name="include_videos">Include videos</string>
    <string name="include_gifs">Include GIFs</string>
    <string name="random_order">Random order</string>
    <string name="move_backwards">Move backwards</string>
    <string name="loop_slideshow">Loop slideshow</string>
    <string name="animation">Animation</string>
    <string name="no_animation">None</string>
    <string name="fade">Fade</string>
    <string name="slide">Slide</string>
    <string name="slideshow_ended">The slideshow ended</string>
    <string name="no_media_for_slideshow">No media for the slideshow have been found</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="cube">Cube</string>
    <string name="depth">Depth</string>
    <string name="random_animation">Aleatório</string>
    <string name="bulk_rename">Renomear em massa</string>
    <string name="bulk_rename_prefix">Prefixo</string>
    <string name="bulk_rename_suffix">Sufixo</string>
    <string name="bulk_rename_start_number">Número inicial</string>
    <string name="bulk_rename_padding">Dígitos</string>
    <string name="bulk_rename_keep_extension">Manter extensão original</string>
    <string name="bulk_rename_preview_label">Prévia:</string>
    <string name="bulk_rename_done">%1$d arquivos renomeados</string>
    <string name="bulk_rename_files_label">Arquivos selecionados:</string>
    <string name="bulk_rename_conflict_title">Conflito de nomes</string>
    <string name="bulk_rename_conflict_msg">Os seguintes arquivos já existem:</string>
    <string name="bulk_rename_skip_conflicts">Pular conflitos</string>
    <string name="group_direct_subfolders">Group direct subfolders</string>
    <string name="group_by">Group by</string>
    <string name="do_not_group_files">Do not group files</string>
    <string name="by_folder">Folder</string>
    <string name="by_last_modified">Last modified</string>
    <string name="by_last_modified_daily">Last modified (daily)</string>
    <string name="by_last_modified_monthly">Last modified (monthly)</string>
    <string name="by_date_taken">Date taken</string>
    <string name="by_date_taken_daily">Date taken (daily)</string>
    <string name="by_date_taken_monthly">Date taken (monthly)</string>
    <string name="by_file_type">File type</string>
    <string name="by_extension">Extension</string>
    <string name="show_file_count_section_header">Show file count at section headers</string>
    <string name="grouping_and_sorting">Please note that grouping and sorting are 2 independent fields</string>
    <string name="folder_on_widget">Folder shown on the widget:</string>
    <string name="playpause">Play / Pause</string>
    <string name="properties">Propriedades</string>
    <string name="delete">Excluir</string>
    <string name="rename">Renomear</string>
    <string name="set_as">Definir como</string>
    <string name="copy">Copiar</string>
    <string name="move">Mover</string>
    <string name="resize">Redimensionar</string>
    <string name="share">Compartilhar</string>
    <string name="toggle_favorite">Toggle favorite</string>
    <string name="toggle_file_visibility">Toggle file visibility</string>
</resources>