<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_actions_wrapper"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="@drawable/gradient_background"
    android:minHeight="@dimen/bottom_actions_height"
    android:scrollbars="none">

    <LinearLayout
        android:id="@+id/bottom_actions_inner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/normal_margin"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/bottom_share"
            android:layout_width="@dimen/list_touch_target_min"
            android:layout_height="@dimen/list_touch_target_min"
            android:layout_marginBottom="@dimen/normal_margin"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/share"
            android:padding="@dimen/normal_margin"
            android:src="@drawable/ic_ios_share" />

        <ImageView
            android:id="@+id/bottom_favorite"
            android:layout_width="@dimen/list_touch_target_min"
            android:layout_height="@dimen/list_touch_target_min"
            android:layout_marginBottom="@dimen/normal_margin"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/toggle_favorite"
            android:padding="@dimen/normal_margin"
            android:src="@drawable/ic_star_outline_vector" />

        <ImageView
            android:id="@+id/bottom_play_pause"
            android:layout_width="@dimen/list_touch_target_min"
            android:layout_height="@dimen/list_touch_target_min"
            android:layout_marginBottom="@dimen/normal_margin"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/playpause"
            android:padding="@dimen/normal_margin"
            android:src="@drawable/ic_pause_vector" />

        <ImageView
            android:id="@+id/bottom_mute"
            android:layout_width="@dimen/list_touch_target_min"
            android:layout_height="@dimen/list_touch_target_min"
            android:layout_marginBottom="@dimen/normal_margin"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/volume"
            android:padding="@dimen/normal_margin"
            android:src="@drawable/ic_vector_speaker_off" />

        <ImageView
            android:id="@+id/bottomProperties"
            android:layout_width="@dimen/list_touch_target_min"
            android:layout_height="@dimen/list_touch_target_min"
            android:layout_marginBottom="@dimen/normal_margin"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/properties"
            android:padding="@dimen/normal_margin"
            android:src="@drawable/ic_info_vector" />

        <ImageView
            android:id="@+id/bottom_delete"
            android:layout_width="@dimen/list_touch_target_min"
            android:layout_height="@dimen/list_touch_target_min"
            android:layout_marginBottom="@dimen/normal_margin"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/delete"
            android:padding="@dimen/normal_margin"
            android:src="@drawable/ic_delete_outline" />

        <ImageView
            android:id="@+id/bottom_edit"
            android:layout_width="@dimen/list_touch_target_min"
            android:layout_height="@dimen/list_touch_target_min"
            android:layout_marginBottom="@dimen/normal_margin"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/edit"
            android:padding="@dimen/normal_margin"
            android:src="@drawable/ic_edit_vector" />

        <ImageView
            android:id="@+id/bottom_rotate"
            android:layout_width="@dimen/list_touch_target_min"
            android:layout_height="@dimen/list_touch_target_min"
            android:layout_marginBottom="@dimen/normal_margin"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/rotate_right"
            android:padding="@dimen/normal_margin"
            android:src="@drawable/ic_rotate_right_vector" />

        <ImageView
            android:id="@+id/bottom_change_orientation"
            android:layout_width="@dimen/list_touch_target_min"
            android:layout_height="@dimen/list_touch_target_min"
            android:layout_marginBottom="@dimen/normal_margin"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/change_orientation"
            android:padding="@dimen/normal_margin"
            android:src="@drawable/ic_orientation_auto_vector" />

        <ImageView
            android:id="@+id/bottom_slideshow"
            android:layout_width="@dimen/list_touch_target_min"
            android:layout_height="@dimen/list_touch_target_min"
            android:layout_marginBottom="@dimen/normal_margin"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/slideshow"
            android:padding="@dimen/normal_margin"
            android:src="@drawable/ic_slideshow_vector" />

        <ImageView
            android:id="@+id/bottom_show_on_map"
            android:layout_width="@dimen/list_touch_target_min"
            android:layout_height="@dimen/list_touch_target_min"
            android:layout_marginBottom="@dimen/normal_margin"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/show_on_map"
            android:padding="@dimen/normal_margin"
            android:src="@drawable/ic_place_vector" />

        <ImageView
            android:id="@+id/bottom_toggle_file_visibility"
            android:layout_width="@dimen/list_touch_target_min"
            android:layout_height="@dimen/list_touch_target_min"
            android:layout_marginBottom="@dimen/normal_margin"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/toggle_file_visibility"
            android:padding="@dimen/normal_margin"
            android:src="@drawable/ic_hide_vector" />

        <ImageView
            android:id="@+id/bottom_rename"
            android:layout_width="@dimen/list_touch_target_min"
            android:layout_height="@dimen/list_touch_target_min"
            android:layout_marginBottom="@dimen/normal_margin"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/rename"
            android:padding="@dimen/normal_margin"
            android:src="@drawable/ic_rename_vector" />

        <ImageView
            android:id="@+id/bottom_set_as"
            android:layout_width="@dimen/list_touch_target_min"
            android:layout_height="@dimen/list_touch_target_min"
            android:layout_marginBottom="@dimen/normal_margin"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/set_as"
            android:padding="@dimen/normal_margin"
            android:src="@drawable/ic_set_as_vector" />

        <ImageView
            android:id="@+id/bottom_copy"
            android:layout_width="@dimen/list_touch_target_min"
            android:layout_height="@dimen/list_touch_target_min"
            android:layout_marginBottom="@dimen/normal_margin"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/copy"
            android:padding="@dimen/normal_margin"
            android:src="@drawable/ic_copy_vector" />

        <ImageView
            android:id="@+id/bottom_move"
            android:layout_width="@dimen/list_touch_target_min"
            android:layout_height="@dimen/list_touch_target_min"
            android:layout_marginBottom="@dimen/normal_margin"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/move"
            android:padding="@dimen/normal_margin"
            android:src="@drawable/ic_move_vector" />

        <ImageView
            android:id="@+id/bottom_resize"
            android:layout_width="@dimen/list_touch_target_min"
            android:layout_height="@dimen/list_touch_target_min"
            android:layout_marginBottom="@dimen/normal_margin"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/resize"
            android:padding="@dimen/normal_margin"
            android:src="@drawable/ic_minimize_vector" />

    </LinearLayout>
</HorizontalScrollView>
